--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
         "laravel/framework": "5.2.39",
         "mccool/laravel-auto-presenter": "^4.3",
         "pragmarx/google2fa": "^0.7.1",
-        "predis/predis": "^1.1",
+        "predis/predis": "0.8.4",
         "rcrowe/twigbridge": "^0.9.2",
         "roumen/feed": "^2.10.4"
     },
